# karag

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REFACTOR_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  Makefile  OPENAPI_CONTRACT_WORKFLOW.md  README.md  debug_ms_marco.py  docker-compose.yml  eval_test_report.json  fsrs.md  heyapi.config.ts  importlinter.ini  nginx.conf  openapi-workspace-document.json  pytest.ini  rag_platform_roadmap.md  requirements.txt  run.sh  setup_jenkins_tools.sh  sonar-project.properties  test_permutations.py  vercel.json
.jenkins/: Jenkinsfile
backend/: .env.example  Dockerfile  OPENAI_INTEGRATION.md  conftest.py  dump_schema.py  eval_dashboard.html  mutmut_config.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  results-unit.xml  test_completions_unit.py  test_curl.sh  test_openai_sdk.py
backend/app/: main.py
backend/app/api/: baas_deps.py  deps.py  errors.py  pagination.py  versioning.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  baas_admin.py  chat.py  completions.py  documents.py  eval.py  router.py  search.py  settings.py  tasks.py  tools.py  workspace_resources.py  workspaces.py
backend/app/core/: auth.py  config.py  constants.py  error_codes.py  eval_framework.py  evaluation.py  exceptions.py  factory.py  llm_cache.py  llm_resilience.py  middleware.py  minio.py  mongodb.py  neo4j.py  path_utils.py  prompt_manager.py  prompt_registry.py  schemas.py  settings_manager.py  telemetry.py
backend/app/eval/: README.md  __init__.py
backend/app/eval/config/: __init__.py  datasets.yaml  loader.py  metrics.yaml
backend/app/eval/datasets/: __init__.py  base.py  definitions.py  download_manager.py  huggingface_loader.py  registry.py
backend/app/eval/metrics/: __init__.py  aggregator.py  generation.py  retrieval.py
backend/app/eval/runners/: __init__.py  base.py  end_to_end_runner.py  retrieval_runner.py  robustness_runner.py  standard_runner.py
backend/app/graph/: builder.py  nodes.py  state.py
backend/app/providers/: __init__.py  adapter.py  base.py  embedding.py  llm.py  reranker.py  resilient.py
backend/app/rag/: advanced_retrieval.py  graph_provider.py  ingestion.py  qdrant_provider.py  rag_service.py
backend/app/rag/chunking/: registry.py
backend/app/rag/graph/: nodes.py  orchestrator.py  state.py
backend/app/rag/store/: base.py  graph_base.py  neo4j_store.py  qdrant.py
backend/app/rag/tools/: tavily_mcp.py
backend/app/repositories/: base_repository.py  document_repository.py  task_repository.py  thread_repository.py  workspace_repository.py
backend/app/schemas/: baas.py  base.py  chat.py  chunking.py  database.py  dataset.py  documents.py  embedding.py  eval.py  execution.py  generation.py  openai.py  pipeline.py  retrieval.py  task.py  users.py  workspace.py
backend/app/services/: api_key_service.py  chat_service.py  config_service.py  dataset_service.py  document_service.py  eval_service.py  graph_service.py  pipeline_service.py  search_service.py  task_service.py  task_worker.py  usage_service.py  user_service.py  vault_service.py  workspace_service.py
backend/app/services/document/: __init__.py  base.py  cross_workspace_service.py  document_ingestion_service.py  document_inspection_service.py  document_upload_service.py  indexing_service.py  ingestion_service.py  orchestration_service.py  query_service.py  storage_service.py
backend/app/services/task/: task_service.py  task_worker.py
backend/app/tools/: local_tools.py  manager.py  registry.py  schemas.py
backend/app/tools/arxiv_downloader/: downloader.py  recursive.py  upload_to_workspace.py
backend/backend/data/: settings.json  tools.json
backend/scripts/: clear_test_data.py  e2e_arxiv_test.py  eval_download.py  eval_download_and_test.py  eval_example.py  eval_report.py  eval_run.py  eval_standalone_test.py  export_openapi.py  generate_workspace_api_keys.py  inspect_docs.py  migrate_baas_collections.py  migration_v2.py  test_providers.py  test_rag.py
backend/tests/: dummy_cancel_test.txt  test_auto_indexing.py  test_default_workspace.py  test_e2e.py  test_graph_integration.py  test_path_security.py  test_path_utils.py  test_rag_engine.py  test_rag_vault.py  test_services.py  test_settings.py  test_telemetry.py  test_workspaces.py
backend/tests/canary/: test_cloud_connectivity.py  test_real_provider_smoke.py
backend/tests/contract/: llm_provider_schema.yaml  test_api_contracts.py  test_llm_contract.py
backend/tests/e2e/: test_e2e.py
backend/tests/integration/: test_auto_indexing.py  test_core_features.py  test_cross_workspace_ops.py  test_document_crud.py  test_document_upload.py  test_inspection_robustness.py  test_langgraph.py  test_new_features.py  test_rag_pipelines.py  test_services.py  test_thread_management.py  test_workspace_crud.py  test_workspace_sync.py
backend/tests/integration/api/: test_admin.py  test_error_handling.py
backend/tests/integration/llm/: test_openai_adapter.py
backend/tests/results/: results.xml
backend/tests/test_robustness/: test_isolation_verification.py  test_negative_injection.py  test_red_green_verification.py
backend/tests/unit/: test_completions.py  test_path_security.py  test_path_utils.py  test_qdrant_provider.py  test_strategies.py  test_telemetry.py
backend/tests/unit/llm/: mock_provider.py  test_output_parser.py  test_prompt_builder.py
src/backend/: .env.example  Dockerfile  __init__.py  conftest.py  dump_schema.py  eval_dashboard.html  pyproject.toml  pytest.ini  results-unit.xml
src/backend/app/: __init__.py  main.py
src/backend/app/adapters/: __init__.py  event_bus.py  providers.py  registry.py  storage.py  vector_store.py
src/backend/app/api/: baas_deps.py  deps.py  errors.py  pagination.py
src/backend/app/config/: __init__.py
src/backend/scripts/: clear_test_data.py  eval_download.py  eval_download_and_test.py  eval_example.py  eval_run.py  export_openapi.py  generate_workspace_api_keys.py  migrate_baas_collections.py
src/backend/tests/: test_platform_api.py
(+715 files in other folders)
