[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anhtranguyen-github", email = "tranguyen.contact@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "duckduckgo-search",
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.2",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.8",
    "langchain-qdrant>=1.1.0",
    "langchain-voyageai>=0.3.2",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "markdown>=3.10.2",
    "mcp>=1.26.0",
    "minio>=7.2.20",
    "motor>=3.7.1",
    "neo4j>=5.28.1",
    "ollama>=0.6.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "playwright>=1.58.0",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.7.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0.post1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.2",
    "structlog>=25.5.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
    "voyageai>=0.3.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "bandit>=1.8.0",
    "checkov>=3.2.0",
    "ruff>=0.15.1",
]
