[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karag-backend"
version = "2.0.0"
description = "Modular RAG & Agentic Chatbot API"
readme = "README.md"
requires-python = ">=3.12"

[tool.mutmut]
paths_to_mutate = [
    "app/services/",
    "app/core/",
    "app/schemas/",
]
tests_dir = "tests/"
excluded_files = [
    "app/main.py",
    "app/core/config.py",
    "app/core/telemetry.py",
]
runner = "pytest"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "mutation: Mutation testing targets",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "app/main.py",
]

[tool.coverage.report]
precision = 2
fail_under = 70
