[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.0",
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "pypdf>=5.0.0",
    "prometheus-client>=0.23.0",
    "psycopg[binary]>=3.2.0",
    "qdrant-client>=1.13.0",
    "redis>=6.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.ruff]
line-length = 100
target-version = "py311"
